# dek

./: .coveragerc  .gitignore  .travis.yml  404.html  CHANGELOG  README.md  README.rst  dek.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  test.sh  test_dek.py
.github/workflows/: python-package.yml
dek/: __init__.py
docs/: index.md
