[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38']

[tool.doks]
auto = true

[tool.poetry]
name = "dek"
version = "1.3.1"
description = "🎴 The decorator-decorator 🎴"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
xmod = ">=1.6.1"

[tool.poetry.group.dev.dependencies]
coverage = "*"
pytest = "*"
flake8 = "*"


[tool.coverage]
[tool.coverage.run]
branch = "True"
source = "dek"

[tool.coverage.report]
fail_under = "100"
skip_covered = "True"
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
