[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38']

[tool.doks]
auto = true

[tool.poetry]
name = "dek"
version = "1.4.0"
description = "🎴 The decorator-decorator 🎴"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
xmod = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
ruff = "*"

[tool.coverage]
[tool.coverage.run]
branch = true
source = ["dek"]

[tool.coverage.report]
fail_under = "100"
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
