[tool.doks]
auto = true

[tool.poetry]
name = "dek"
version = "1.4.2"
description = "🎴 The decorator-decorator 🎴"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rec/dek"
homepage = "https://github.com/rec/dek"
documentation = "https://rec.github.io/dek"

[tool.poetry.dependencies]
python = ">=3.8"
xmod = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
ruff = "*"

[tool.coverage]
[tool.coverage.run]
branch = true
source = ["dek"]

[tool.coverage.report]
fail_under = "100"
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
